Fixed message overflow

--- a/frontend/src/components/MessageBoxes/Chat.css
+++ b/frontend/src/components/MessageBoxes/Chat.css
@@ -18,7 +18,7 @@
 
 .message-window {
     width: 100%;
-    height: calc(100vh - 180px);
+    height: calc(100% - 180px);
     padding-top: 20px;
     overflow-y: auto;
     display: flex;
